--- a/src/views/driverDashboard.ejs
+++ b/src/views/driverDashboard.ejs
@@ -1,11 +1,34 @@
-
 <div id="driver-dashboard">
+    <div class="drivers-section">
+        <div class="managed-by">
+            <div class="header">
+                <h3>Moi spedytorzy</h3>
+            </div>
+            <div class="spedytors-grid">
+                <% if (user.spedytorIds && user.spedytorIds.length > 0) { %>
+                    <% user.spedytorIds.forEach(spedytor => { %>
+                        <div class="spedytor-card">
+                            <div class="spedytor-name">
+                                <%= spedytor.name %> <%= spedytor.surname %>
+                            </div>
+                            <div class="status-indicator <%= spedytor.isOnline ? 'online' : 'offline' %>"
+                                 data-user-status="<%= spedytor._id %>">
+                                <%= spedytor.isOnline ? 'Dostępny(a)' : 'Niedostępny(a)' %>
+                            </div>
+                        </div>
+                    <% }) %>
+                <% } else { %>
+                    <p>Brak przypisanych spedytorów</p>
+                <% } %>
+            </div>
+        </div>
+
     <div class="invitations-section">
         <h3>Zaproszenia od spedytorów</h3>
         <% if (user.pendingInvitations && user.pendingInvitations.length > 0) { %>
             <% user.pendingInvitations.forEach(invitation => { %>
                 <div class="invitation-card">
-                    <p>Spedytor: <%= invitation.spedytorId.email %></p>
+                    <p>Spedytor: <%= invitation.spedytorId.name %> <%= invitation.spedytorId.surname %></p>
                     <div class="invitation-actions">
                         <form action="/api/job/respond-invitation/<%= invitation._id %>" method="POST" style="display: inline;">
                             <input type="hidden" name="response" value="accept">
@@ -20,6 +43,44 @@
             <% }) %>
         <% } else { %>
             <p>Brak oczekujących zaproszeń</p>
+        <% } %>
+    </div>
+
+    <div class="assigned-jobs-section">
+        <h3>Przypisane prace</h3>
+        <% if (assignedJobs && assignedJobs.length > 0) { %>
+            <table class="jobs-table">
+                <thead>
+                    <tr>
+                        <th>Cena</th>
+                        <th>Waga</th>
+                        <th>Wymiary</th>
+                        <th>Adres odbioru</th>
+                        <th>Data odbioru</th>
+                        <th>Adres dostawy</th>
+                        <th>Data dostawy</th>
+                        <th>Odległość</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% assignedJobs.forEach(job => { %>
+                        <tr>
+                            <td><%= job.price %> PLN</td>
+                            <td><%= job.weight %> kg</td>
+                            <td><%= job.dimensions.length %>x<%= job.dimensions.width %>x<%= job.dimensions.height %> cm</td>
+                            <td><%= job.pickup.address %></td>
+                            <td><%= new Date(job.pickup.date).toLocaleString() %></td>
+                            <td><%= job.delivery.address %></td>
+                            <td><%= new Date(job.delivery.date).toLocaleString() %></td>
+                            <td><%= job.distance %> km</td>
+                            <td class="status-<%= job.status %>"><%= job.status %></td>
+                        </tr>
+                    <% }) %>
+                </tbody>
+            </table>
+        <% } else { %>
+            <p>Brak przypisanych prac</p>
         <% } %>
     </div>
 </div>
