websockets fix, rejecting invites

--- a/src/views/layouts/dashboardLayout.ejs
+++ b/src/views/layouts/dashboardLayout.ejs
@@ -25,14 +25,6 @@
                 console.error('Socket connection error:', error);
             });
 
-            socket.on('connect', () => {
-                console.log('Socket connected, joining room:', userId);
-                socket.emit('user_connected', userId);
-            });
-
-            socket.on('connect_error', (error) => {
-                console.error('Socket connection error:', error);
-            });
 
             // Status update handling
             socket.on('status_update', ({ userId, isOnline }) => {
@@ -47,6 +39,8 @@
             if (userRole === 'kierowca') {
             // Jeśli otrzyma nowe zaproszenie to ma się dodać
             socket.on('new_invitation', (data) => {
+                console.log(data);
+                
                 const invitationsList = document.querySelector('.invitations-section');
                 if (invitationsList) {
                     // Skasowanie komunikatu o tym, że nie ma zaproszeń
@@ -57,7 +51,7 @@
 
                     const newInvitation = `
                         <div class="invitation-card">
-                            <p>Spedytor: ${data.spedytorEmail}</p>
+                            <p>Spedytor: ${data.spedytorName} ${data.spedytorSurname}</p>
                             <div class="invitation-actions">
                                 <form action="/api/job/respond-invitation/${data.invitation._id}" method="POST" style="display: inline;">
                                     <input type="hidden" name="response" value="accept">
@@ -78,10 +72,18 @@
 
             // SPEDYTOR
             if (userRole === 'spedytor') {
-                // Powiadamianie o tym, że spedytor otrzymał zaproszenie
-                socket.on('invitation_response', (data) => {
-                    const status = data.response === 'accept' ? 'zaakceptował' : 'odrzucił';
+                // Powiadamianie o tym, że spedytor otrzymał odpowiedź
+                socket.on('driver_accepted', (data) => {
+                    window.location.reload();
                 });
+
+                socket.on('driver_rejected', (data) => {
+                    window.location.reload()
+                });
+
+
+
+            
             }
 
         });
