--- a/src/views/spedytorDashboard.ejs
+++ b/src/views/spedytorDashboard.ejs
@@ -7,6 +7,8 @@
         // Przeładowywanie okna, gdy driver zaakceptuje zaproszenie
         if (userRole === 'spedytor') {
             socket.on('driver_accepted', () => {
+                console.log("Zaakceptowano zaproszenie");
+                
                 window.location.reload();
             });
         }
