--- a/src/views/layouts/dashboardLayout.ejs
+++ b/src/views/layouts/dashboardLayout.ejs
@@ -7,8 +7,27 @@
     <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+
+           // Konfiguracja klienta MQTT
+        const mqttConfig = {
+            clientId: 'webclient_' + Math.random().toString(16).substr(2, 8),
+            protocol: 'ws',
+            hostname: 'localhost',
+            port: 8000,
+            path: '/mqtt', 
+            keepalive: 60,
+            reconnectPeriod: 5000,
+            connectTimeout: 30 * 1000,
+            clean: true
+        };
+
+        
+        const client = mqtt.connect(`ws://${mqttConfig.hostname}:${mqttConfig.port}${mqttConfig.path}`, mqttConfig);
+
+
             const socket = io();
             const userId = '<%= user.id %>';
             const userRole = '<%= user.role %>';
@@ -86,7 +105,24 @@
             
             }
 
+            // MQTT
+            client.on('connect', () => {
+            console.log('Browser connected to MQTT');
+            client.subscribe('jobs/#');
         });
+
+            client.on('message', (topic, message) => {
+                console.log('Received:', topic, message.toString());
+            });
+
+            
+            
+
+        });
+
+
+
+        
     </script>
 </head>
 <body>
