--- a/src/views/layouts/dashboardLayout.ejs
+++ b/src/views/layouts/dashboardLayout.ejs
@@ -11,9 +11,12 @@
     <script>
         window.userId = "<%= user.id %>";
         window.userRole = "<%= user.role %>";
+        window.subscribedUrls = "<%= user.subscribedUrls %>"
     </script>
+    
     <script src="/js/wsHandler.js"></script>
     <script src="/js/mqttHandler.js"></script>
+    <script src="/js/main.js"></script>
 </head>
 <body>
     <nav class="navbar">
