--- a/src/views/layouts/dashboardLayout.ejs
+++ b/src/views/layouts/dashboardLayout.ejs
@@ -19,6 +19,7 @@
     <script src="/js/main.js"></script>
 </head>
 <body>
+    <div id="popup-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
     <nav class="navbar">
         <a href="/" class="brand">CargoLink</a>
         <div class="dashboard-type">
