--- a/src/views/layouts/dashboardLayout.ejs
+++ b/src/views/layouts/dashboardLayout.ejs
@@ -16,6 +16,9 @@
     
     <script src="/js/wsHandler.js"></script>
     <script src="/js/mqttHandler.js"></script>
+    <script src="/js/client.js"></script>
+    <script src="/js/driver.js"></script>
+    <script src="/js/spedytor.js"></script>
     <script src="/js/main.js"></script>
 </head>
 <body>
@@ -34,15 +37,6 @@
             </form>
         </div>
     </nav>
-    <!-- <form action="/api/auth/logout" method="POST">
-        <button type="submit">Logout</button>
-    </form> -->
-
-    <!-- <main class="main-content">
-        <header>
-            <h1>Dashboard</h1>
-        </header> -->
-        
         <%- body %>
     </main>
 </body>
