Assigned Jobs fix, removing driver fix, resigning from doing job

--- a/src/views/spedytorDashboard.ejs
+++ b/src/views/spedytorDashboard.ejs
@@ -124,6 +124,7 @@
                             <% }}); %>
                         </select>
                         <button onclick="assignDriver('<%= job._id %>')" class="assign-btn">Ustaw</button>
+                        <button onclick="deleteJob('<%= job._id %>')" class="delete-btn">Zrezygnuj</button>
                     </td>
                 </tr>
             <% }); %>
