--- a/src/views/clientDashboard.ejs
+++ b/src/views/clientDashboard.ejs
@@ -53,7 +53,8 @@
             </div>
         </div>
         <div id="client-jobs">
-            <table>
+            <div class="table-warpper">
+            <table class="jobs-table">
                 <thead>
                     <tr>
                         <th>Cena</th>
@@ -120,6 +121,7 @@
                     <% }); %>
                 </tbody>
             </table>
+        </div>
         </div>
     </div>
 </body>
